--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -37,8 +37,8 @@ services:
       MAIL_ENCRYPTION: none
       MAIL_USERNAME: ""
       MAIL_PASSWORD: ""
-      FROM_NAME: "John Smith"
-      FROM_ADDRESS: john.smith@example.com
+      FROM_NAME: "Liam Bao"
+      FROM_ADDRESS: liam.bao@gmail.com
 
   authentication-service:
     build:
