--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+*/listenerApp
+*/authApp
+*/brokerApp
+*/frontApp
+*/loggerServiceApp
+*/mailerApp
+project/db-data/
