--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - ./db-data/postgres/:/var/lib/postgresql/data/
 
   mongo:
-    image: 'mongo:4.2.16-bionic'
+    image: 'mongo'
     ports:
       - "27017:27017"
     environment:
