--- a/project/k8s/broker.yml
+++ b/project/k8s/broker.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: broker-service
-        image: "tsawler/broker-service:1.0.1"
+        image: "liambao/gomicro-broker-service:1.0.0"
         resources:
           requests:
             memory: "64Mi"
