--- a/project/k8s/mail.yml
+++ b/project/k8s/mail.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mailer-service
-        image: "tsawler/mail-service:1.0.0"
+        image: "liambao/gomicro-mail-service:1.0.0"
         resources:
           requests:
             memory: "64Mi"
@@ -36,7 +36,7 @@ spec:
           - name: MAIL_PASSWORD
             value: ""
           - name: FROM_NAME
-            value: "John Smith"
+            value: "Liam Bao"
           - name: FROM_ADDRESS
             value: "admin@example.com"
         ports:
